fix: fix add transaction and its behaviour